--- a/Workout/app/src/main/res/values/strings.xml
+++ b/Workout/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="workout_title">Title</string>
     <string name="workout_description">Description</string>
 
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="reset">Reset</string>
+
 </resources>
