--- a/BitsandPizzas/app/src/main/res/values/strings.xml
+++ b/BitsandPizzas/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
         <item>Sebastopol</item>
     </string-array>
 
+    <string name="home_tab">Home</string>
+    <string name="pizza_tab">Pizzas</string>
+    <string name="pasta_tab">Pasta</string>
+    <string name="store_tab">Stores</string>
+
 </resources>
